# callable-journal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-package.yml  test-package.yml
src/callable_journal/: __init__.py  encoders.py  exception_msg.py  exceptions.py  formatter.py  journal.py  param_arg_mapper.py
test/: docs_example_test.py  encoders_test.py  exception_msg_test.py  formatter_test.py  journal-cfg.yml  journal-log-format-cfg.yml  journal_test.py  param_arg_mapper_args_3_8_test.py  param_arg_mapper_args_test.py  param_arg_mapper_result_test.py  param_arg_mapper_test.py
